# Lilium

./: .drone.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: assets.rs  main.rs
