[package]
name = "lily"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
log = "^0.4"
env_logger = "^0.8"

once_cell = "1.7"
winit = "^0.24"

[dependencies.skulpin]
version = "^0.13"
default-features = false

[dependencies.assets_manager]
version = "0.4"
features = ["hot-reloading", "embedded"]
